<resources>
    <string name="app_name">Minute medicine</string>
    <string name="home">Home</string>
    <string name="browse">Browse</string>
    <string name="add">Add</string>
    <string name="alarm_clock">Alarm clock</string>
    <string name="profile">Profile</string>
    <string name="save">Save</string>
    <string name="add_alarm">Add Alarm</string>
    <string name="title">Title</string>
    <string name="medicine">Medicine</string>
    <string name="cancel">Cancel</string>
    <string name="search">Search</string>
    <string name="and_more">And more</string>
    <string name="add_reminder_title">Add reminder</string>
    <string name="add_reminder_text">Add a reminder to help you use your medicines regularly</string>
    <!--  week  -->
    <string name="sunday">Sunday</string>
    <string name="monday">Monday</string>
    <string name="tuesday">Tuesday</string>
    <string name="wednesday">Wednesday</string>
    <string name="thursday">Thursday</string>
    <string name="friday">Friday</string>
    <string name="saturday">Saturday</string>
    <!--  week  -->
    <!--  health  -->
    <string name="symptoms">Symptoms</string>
    <string name="activity">Activity</string>
    <string name="heart">Heart</string>
    <string name="movement">Movement</string>
    <string name="hearing">Hearing</string>
    <string name="nutrition">Nutrition</string>
    <string name="blood_circulation">Blood Circulation</string>
    <string name="sleep">Sleep</string>
    <string name="insulin_doses">Insulin doses</string>
    <string name="inhaler">Inhaler</string>
    <string name="drinking_alcohol">Drinking Alcohol</string>
    <string name="anemia">Anemia</string>
    <string name="chronic_diseases">Chronic Diseases</string>
    <string name="osteoporosis">Osteoporosis</string>
    <!--  health  -->
    <!--  profile  -->
    <string name="id">ID</string>
    <string name="name">Name:</string>
    <string name="age">Age:</string>
    <string name="number">Number:</string>
    <string name="blood_type">Blood Type:</string>
    <string name="gender">Gender</string>
    <string name="birth">Birth</string>
    <string name="members">Members</string>
    <!--  profile  -->

    <string-array name="alarm_array">
        <item>Anaemia</item>
        <item>Anorexia</item>
        <item>Arrhythmia</item>
        <item>Insomnia</item>
        <item>Bronchitis</item>
        <item>Antritis</item>
        <item>Gastritis</item>
        <item>Gonorrhoea</item>
        <item>Diabetes</item>
        <item>Cough</item>
    </string-array>
</resources>