<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/page_1"
        android:enabled="true"
        android:title="@string/home"
        android:icon="@drawable/home_selector" />
    <item
        android:id="@+id/page_2"
        android:enabled="true"
        android:title="@string/browse"
        android:icon="@drawable/browse_selector" />
    <item
        android:id="@+id/page_3"
        android:enabled="true"
        android:title="@string/add"
        android:icon="@drawable/add" />
    <item
        android:id="@+id/page_4"
        android:enabled="true"
        android:title="@string/alarm_clock"
        android:icon="@drawable/clock_selector" />
    <item
        android:id="@+id/page_5"
        android:enabled="true"
        android:title="@string/profile"
        android:icon="@drawable/profile_selector" />
</menu>