<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingHorizontal="15dp">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:background="@drawable/profile_frame"
            android:paddingTop="5dp"
            android:paddingBottom="10dp"
            app:layout_constraintTop_toTopOf="parent">

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/appCompatTextView2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="20dp"
                android:text="@string/id"
                android:textColor="@color/white"
                android:textSize="18sp"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <androidx.appcompat.widget.AppCompatImageView
                android:id="@+id/appCompatImageView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="20dp"
                android:src="@drawable/note_pencil"
                app:layout_constraintBottom_toBottomOf="@+id/appCompatTextView2"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="@+id/appCompatTextView2" />

            <View
                android:id="@+id/view4"
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@color/nav_menu"
                app:layout_constraintTop_toBottomOf="@+id/appCompatTextView2" />

            <LinearLayout
                android:id="@+id/text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:orientation="vertical"
                app:layout_constraintStart_toStartOf="@id/appCompatTextView2"
                app:layout_constraintTop_toBottomOf="@id/appCompatTextView2">

                <androidx.appcompat.widget.AppCompatTextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/name"
                    android:textColor="@color/white"
                    android:textSize="10sp"
                    android:textStyle="bold" />

                <androidx.appcompat.widget.AppCompatTextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:text="@string/age"
                    android:textColor="@color/white"
                    android:textSize="10sp"
                    android:textStyle="bold" />

                <androidx.appcompat.widget.AppCompatTextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:text="@string/number"
                    android:textColor="@color/white"
                    android:textSize="10sp"
                    android:textStyle="bold" />

                <androidx.appcompat.widget.AppCompatTextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:text="@string/blood_type"
                    android:textColor="@color/white"
                    android:textSize="10sp"
                    android:textStyle="bold" />

                <androidx.appcompat.widget.AppCompatTextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:text="@string/gender"
                    android:textColor="@color/white"
                    android:textSize="10sp"
                    android:textStyle="bold" />

                <androidx.appcompat.widget.AppCompatTextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:text="@string/birth"
                    android:textColor="@color/white"
                    android:textSize="10sp"
                    android:textStyle="bold" />

                <androidx.appcompat.widget.AppCompatTextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:text="@string/members"
                    android:textColor="@color/white"
                    android:textSize="10sp"
                    android:textStyle="bold" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/text_info"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:orientation="vertical"
                app:layout_constraintStart_toEndOf="@id/text"
                app:layout_constraintTop_toTopOf="@+id/text">

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/name"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Ilia"
                    android:textColor="@color/white"
                    android:textSize="10sp" />

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/age"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:text="19"
                    android:textColor="@color/white"
                    android:textSize="10sp" />

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/number"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:text="88005553535"
                    android:textColor="@color/white"
                    android:textSize="10sp" />

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/blood_type"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:text="0+"
                    android:textColor="@color/white"
                    android:textSize="10sp" />

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/gender"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:text="sdfsdf"
                    android:textColor="@color/white"
                    android:textSize="10sp" />

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/birth"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:text="19/08/2003"
                    android:textColor="@color/white"
                    android:textSize="10sp" />

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/members"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:text="Not an organ donor"
                    android:textColor="@color/white"
                    android:textSize="10sp" />
            </LinearLayout>

            <de.hdodenhof.circleimageview.CircleImageView
                android:id="@+id/icon"
                android:layout_width="80dp"
                android:layout_height="80dp"
                android:src="@drawable/camera"
                app:layout_constraintEnd_toEndOf="@+id/appCompatImageView"
                app:layout_constraintTop_toTopOf="@+id/text_info" />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.core.widget.NestedScrollView>