<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    android:paddingHorizontal="15dp"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/home_main_container"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <SearchView
            android:id="@+id/search"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_marginTop="20dp"
            android:background="@drawable/alarm_frame"
            android:iconifiedByDefault="false"
            android:queryHint="@string/search"
            android:searchIcon="@drawable/magnifying_glass"
            app:layout_constraintTop_toTopOf="parent" />

        <LinearLayout
            android:id="@+id/add_container"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginTop="20dp"
            android:paddingHorizontal="15dp"
            android:visibility="gone"
            tools:visibility="visible"
            app:layout_constraintTop_toBottomOf="@+id/search"
            android:background="@drawable/main_frame">

            <androidx.appcompat.widget.AppCompatTextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/white"
                android:text="@string/add_reminder_title"
                android:textSize="20dp"
                android:textStyle="bold"
                android:layout_marginTop="10dp"
                android:gravity="center" />

            <androidx.appcompat.widget.AppCompatTextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/white"
                android:text="@string/add_reminder_text"
                android:textSize="20dp"
                android:layout_marginTop="10dp"
                android:gravity="center" />

            <androidx.appcompat.widget.AppCompatImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginVertical="30dp"
                android:src="@drawable/add_blue" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/today_reminders"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginTop="20dp"
            app:layout_constraintTop_toBottomOf="@id/add_container"
            android:background="@drawable/main_frame">

            <androidx.appcompat.widget.AppCompatTextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="18dp"
                android:layout_marginHorizontal="20dp"
                android:layout_marginTop="15dp"
                android:textColor="@color/white"
                android:text="Today Reminders" />

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginTop="7dp"
                android:background="@color/nav_menu"
                app:layout_constraintTop_toBottomOf="@+id/application_days" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/clock_fragment_recycler_view"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginHorizontal="20dp"
                android:layout_marginTop="5dp"
                android:layout_marginBottom="15dp"
                app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                app:layout_constraintBottom_toBottomOf="parent" />
        </LinearLayout>
    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.core.widget.NestedScrollView>